Bug 387659 - Transaction should not have a timeout.
Summary: Transaction should not have a timeout.
Status: RESOLVED FIXED
Alias: None
Product: libqapt
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Harald Sitter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-07 08:09 UTC by sbw
Modified: 2018-01-08 02:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The patch to resolve this problem (900 bytes, patch)
2017-12-07 08:09 UTC, sbw
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sbw 2017-12-07 08:09:59 UTC
Created attachment 109231 [details]
The patch to resolve this problem

In QProcess::waitForFinsiehd, it has a 30s timeout in default.
But Transaction should not have it.

Because some packages maybe have a long install time.
for example, we can easy create a DEB package that has a  sleep(31) in postinst script.

I think that's the reason for many `Backend disappear` or `Transaction crash` error.
Comment 1 Christoph Feck 2017-12-31 13:07:48 UTC
Please submit your patch via https://phabricator.kde.org/differential/diff/create/
Comment 2 Harald Sitter 2018-01-08 02:16:40 UTC
Git commit 46f45d734f5de8d856582783af65d854c590147b by Harald Sitter.
Committed on 08/01/2018 at 02:16.
Pushed by sitter into branch 'master'.

dpkg -i should not have a timeout

Summary:
we have no idea how long installing a package will take, it could be super
large or the disk could be super slow, or its maint scripts could do
network-bound IO.

if anything should make judgment on what is too long it should be dpkg
itself, not qapt.

Reviewers: sitter, vanini

Reviewed By: sitter

Differential Revision: https://phabricator.kde.org/D9611

M  +1    -1    src/worker/aptworker.cpp

https://commits.kde.org/libqapt/46f45d734f5de8d856582783af65d854c590147b