dpkg -i should not have a timeout

Summary:
we have no idea how long installing a package will take, it could be super
large or the disk could be super slow, or its maint scripts could do
network-bound IO.

if anything should make judgment on what is too long it should be dpkg
itself, not qapt.

BUG: 387659

Reviewers: sitter, vanini

Reviewed By: sitter

Differential Revision: https://phabricator.kde.org/D9611